<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_item_detail_host">Item Detail Host Activity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="location">Location</string>
    <string name="camera_gallery_dialog">Do you want to add picture with the gallery or camera ?</string>
    <string name="gallery_confirmation">Continue with gallery</string>
    <string name="camera_confirmation">Continue with camera</string>
    <string name="road">Road</string>
    <string name="apartment">Apartment</string>
    <string name="city">City</string>
    <string name="country_code">Country code</string>
    <string name="country">Country</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="description_dialog">Type the description of your picture</string>
    <string name="delete_dialog">Are you sure you want to delete this photo?</string>
    <string name="add_property">Add property</string>
    <string name="property_settings">Property Settings</string>
    <string name="price">Price</string>
    <string name="type_of_property">Type of Property</string>
    <string name="sold">Sold</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="main_picture_property">Main picture property</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_permission">Location permission are denied.Please turn it on.</string>
    <string name="location_rationale">Ask Fine location permission</string>
    <string name="show_map">Show Map</string>
    <string name="show_search">Show Search</string>
    <string name="size">Size</string>
    <string name="number_of_photos">Number of photos</string>
    <string name="date_for_range_from_today">Date of property</string>
    <string name="date_of_sale_for_range_from_today">Date of sale of property</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="search_property">Search Property</string>
    <string name="date_picker">%1$s/%2$s/%3$d</string>
    <string name="surface_string">%1$d m²</string>
    <string name="loan_amount">Amount of your loan</string>
    <string name="loan_duration">Duration of your loan</string>
    <string name="interest_rate">Interest rate</string>
    <string name="loan_simulator">Loan simulator</string>
    <string name="interest_value">Interest : 1.25%</string>
    <string name="loan_string_result">Your monthly payment will be %1$s$ per month</string>
    <string name="notification_channel_name">Real Estate Manager Channel</string>
    <string name="notification_channel_description">A Real Estate Manager channel description</string>
</resources>
