<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditPropertyDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_add_photos"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_to_photos_24"
            android:layout_marginStart="@dimen/text_margin"
            app:layout_constraintTop_toTopOf="@id/media_text"
            app:layout_constraintBottom_toBottomOf="@id/media_text"
            app:layout_constraintStart_toEndOf="@id/media_text"/>

        <TextView
            android:id="@+id/media_text"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/media"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_text"
            tools:listitem="@layout/item_photos" />

        <TextView
            android:id="@+id/description_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="32dp"
            android:text="@string/description"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photos_recyclerview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_title" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/surface_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin"
            android:layout_marginTop="@dimen/icon_margin"
            android:drawableStart="@drawable/ic_baseline_crop_square_24"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/surface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surface_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/surface_title"
            app:layout_constraintTop_toBottomOf="@id/surface_title" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surface_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surface"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/number_rooms_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:drawableStart="@drawable/house"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/number_of_rooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surface_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_rooms_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/number_rooms_title"
            app:layout_constraintTop_toBottomOf="@id/number_rooms_title" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_rooms_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_rooms"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/number_bathroom_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:drawableStart="@drawable/ic_baseline_bathtub_24"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/number_of_bathrooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_rooms_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_bathroom_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/number_bathroom_title"
            app:layout_constraintTop_toBottomOf="@id/number_bathroom_title" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_bathroom_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_bathrooms"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/number_bedroom_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:drawableStart="@drawable/ic_baseline_bed_24"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/number_of_bedrooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_bathroom_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_bedroom_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/number_bedroom_title"
            app:layout_constraintTop_toBottomOf="@id/number_bedroom_title" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_bedroom_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_bedrooms"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/location_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_bedroom_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_road_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/location_image"
            app:layout_constraintStart_toStartOf="@id/location_title"
            app:layout_constraintTop_toBottomOf="@id/location_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_road_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/road"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_apartment_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/location_road_input"
            app:layout_constraintTop_toBottomOf="@id/location_road_input"
            app:layout_constraintEnd_toStartOf="@id/location_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_apartment_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/apartment"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_city_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/location_apartment_input"
            app:layout_constraintTop_toBottomOf="@id/location_apartment_input"
            app:layout_constraintEnd_toStartOf="@id/location_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_city_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_country_code_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/location_city_input"
            app:layout_constraintTop_toBottomOf="@id/location_city_input"
            app:layout_constraintEnd_toStartOf="@id/location_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_country_code_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_code"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_country_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/location_country_code_input"
            app:layout_constraintTop_toBottomOf="@id/location_country_code_input"
            app:layout_constraintEnd_toStartOf="@id/location_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_country_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/location_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:src="@drawable/ic_baseline_android_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_country_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>